objects/privacycenter__Masking_Execution_Log__c.object
<CustomObject>
    <fields>
        <fullName>privacycenter__Configuration_Id__c</fullName>
        <label>Configuration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Configuration_Name__c</fullName>
        <label>Policy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Has_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>privacycenter__Masking_Execution_Id__c</fullName>
        <label>Execution Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>privacycenter__Object_Processing__c</fullName>
        <label>Object Processing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Record_Count_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of records on the object being processed.</description>
        <inlineHelpText>The total number of records on the object being processed.</inlineHelpText>
        <label>Record Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privacycenter__Records_Failed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of records failed for this object.</description>
        <inlineHelpText>Total number of records failed for this object.</inlineHelpText>
        <label>Records Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privacycenter__Records_Processed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of records processed for this object.</description>
        <inlineHelpText>Total number of records processed for this object.</inlineHelpText>
        <label>Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>privacycenter__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>privacycenter__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Execution Start</fullName>
                </value>
                <value>
                    <fullName>Object Start</fullName>
                </value>
                <value>
                    <fullName>Object Completion</fullName>
                </value>
                <value>
                    <fullName>Mapping Completion</fullName>
                </value>
                <value>
                    <fullName>Sync Completion</fullName>
                </value>
                <value>
                    <fullName>Cache Processing</fullName>
                </value>
                <value>
                    <fullName>Cache Completion</fullName>
                </value>
                <value>
                    <fullName>Execution Completion</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Run Log</label>
    <listViews>
        <fullName>privacycenter__All</fullName>
        <columns>NAME</columns>
        <columns>privacycenter__Status__c</columns>
        <columns>privacycenter__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>privacycenter__Masking_Execution_Id__c</columns>
        <columns>privacycenter__Configuration_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Run Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Run Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>